--- a/coffe-s-management/src/styles/index.css
+++ b/coffe-s-management/src/styles/index.css
@@ -1,3 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+header {
+    font-family: cursive;
+}
+
+body {
+    font-family:cursive;
+}
